--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
     "img-loader": "^2.0.0",
+    "markdown-loader": "^2.0.1",
+    "markdown-server": "0.0.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -30,6 +33,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-remarkable": "^1.1.2"
+    "react-infinite": "^0.12.1",
+    "react-markdown": "^2.5.0",
+    "react-remarkable": "^1.1.2",
+    "react-router-dom": "^4.2.2",
+    "react-scroll": "^1.5.5"
   }
 }
