--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^2.5.0",
     "react-remarkable": "^1.1.2",
     "react-router-dom": "^4.2.2",
-    "react-scroll": "^1.5.5"
+    "react-scroll": "^1.5.5",
+    "react-scrollable-anchor": "^0.5.0"
   }
 }
